@startuml
class FruitAdapter {
- int resourceLayout
+ void removeItem(int)
+ View getView(int,View,ViewGroup)
}
class fruitselection {
~ myDBHelper myHelper
~ EditText edtName
~ Button btnInit
~ SQLiteDatabase sqlDB
~ ListView listView
~ FruitAdapter adapter
# void onCreate(Bundle)
- void deleteItemFromDatabase(String,int,String)
- void performSelect()
}
class fruitselection$myDBHelper {
+ void onCreate(SQLiteDatabase)
+ void onUpgrade(SQLiteDatabase,int,int)
}
class totalfruit {
- ListView listView
- TextView totalTextView
- SQLiteDatabase sqlDB
# void onCreate(Bundle)
- ArrayList<FruitItem> getDataFromDatabase()
- int calculateTotal(ArrayList<FruitItem>)
- ArrayList<FruitItem> consolidateFruitList(ArrayList<FruitItem>)
- ArrayList<FruitItem> removeTotalItem(ArrayList<FruitItem>)
}
class FruitItem {
- String name
- int number
- String time
+ String getName()
+ int getNumber()
+ void setNumber(int)
+ String getTime()
+ String toString()
}
class calendarview {
- TextView dateTextView
- TextView fruitTextView
- SQLiteDatabase sqlDB
- Button btnRestart
- EditText etxRestart
# void onCreate(Bundle)
- String getFruitDataFromDatabase(String)
}
class MainActivity {
~ TextView result
~ ImageView imageView
~ Button picture
~ int imageSize
# void onCreate(Bundle)
+ void classifyImage(Bitmap)
+ void onActivityResult(int,int,Intent)
}


ArrayAdapter <|-- FruitAdapter
AppCompatActivity <|-- fruitselection
fruitselection +.. fruitselection$myDBHelper
SQLiteOpenHelper <|-- fruitselection$myDBHelper
AppCompatActivity <|-- totalfruit
Activity <|-- calendarview
AppCompatActivity <|-- MainActivity
@enduml